Fix broken links in prep material

--- a/Workshop 1 - Athens/Adv0_Preparation.html
+++ b/Workshop 1 - Athens/Adv0_Preparation.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Matt Denwood" />
 <meta name="author" content="Giles Innocent" />
 
-<meta name="date" content="2020-02-12" />
+<meta name="date" content="2020-02-14" />
 
 <title>Workshop preparation</title>
 
@@ -1639,7 +1639,7 @@ summary {
 <h3 class="subtitle">Homework and software installation for the HARMONY advanced training workshop</h3>
 <h4 class="author">Matt Denwood</h4>
 <h4 class="author">Giles Innocent</h4>
-<h4 class="date">2020-02-12</h4>
+<h4 class="date">2020-02-14</h4>
 
 </div>
 
@@ -1678,7 +1678,7 @@ stopifnot(numeric_version(testjags()$rjags.version) &gt;= &quot;4-8&quot;)</code
 </div>
 <div id="simple-web-usage" class="section level2">
 <h2>Simple Web Usage</h2>
-<p>We have created a public repository containing the teaching material for the training workshop. This means that anyone can view the teaching material at any time via the following website: <a href>https://github.com/ku-awdc/HarmonyTraining</a></p>
+<p>We have created a public repository containing the teaching material for the training workshop. This means that anyone can view the teaching material at any time via the following website: <a href="https://github.com/ku-awdc/HarmonyTraining" class="uri">https://github.com/ku-awdc/HarmonyTraining</a></p>
 <p>First click on the “Workshop 1 - Athens” folder, then you should see a number of files listed with names like “Adv1_Theory.Rmd”, “Adv1_Theory.pdf” etc. Each of the sessions for the advanced training workshop (including this preparation document) has a series of files: the .Rmd is the original Rmarkdown document, and the .pdf and .html files are created from these. You can click on any of these files to view them, although of the different file formats the .pdf version is probably easiest to download directly from the website. There are two problems with this:</p>
 <p>1 - You will likely encounter problems when copy/pasting R code from the PDF files.</p>
 <p>2 - If/when any of the files are updated, you will not get an automatic update of the new version.</p>
@@ -1686,11 +1686,11 @@ stopifnot(numeric_version(testjags()$rjags.version) &gt;= &quot;4-8&quot;)</code
 </div>
 <div id="creating-an-account" class="section level2">
 <h2>Creating an Account</h2>
-<p>If you have never used GitHub before, you should create an account via <a href>http://github.com</a> - it is free and easy. Remember to make a note of the username and password that you just created!</p>
+<p>If you have never used GitHub before, you should create an account via <a href="http://github.com" class="uri">http://github.com</a> - it is free and easy. Remember to make a note of the username and password that you just created!</p>
 </div>
 <div id="github-desktop" class="section level2">
 <h2>GitHub Desktop</h2>
-<p>The easiest way to use GitHub is via GitHub desktop. Go to <a href>https://desktop.github.com</a> and download/install the software. Then open it and sign in using your GitHub account (the username and password that you just created). This should become the primary way in which you interact with GitHub, rather than via your browser.</p>
+<p>The easiest way to use GitHub is via GitHub desktop. Go to <a href="https://desktop.github.com" class="uri">https://desktop.github.com</a> and download/install the software. Then open it and sign in using your GitHub account (the username and password that you just created). This should become the primary way in which you interact with GitHub, rather than via your browser.</p>
 <p>The first step is to clone the <code>HarmonyTraining</code> repository on to your computer. From inside GitHub Desktop, go to the File menu then Clone Respository, then click on the URL tab. Then type/paste <code>ku-awdc/HarmonyTraining</code> into the box under <code>Repository URL or GitHub username and repository</code>. A suggested local path folder will be created automatically at the bottom but feel free to change this. Then click on Clone and wait for the files to download.</p>
 <p>Creating the clone copies all of the files currently on the GitHub repository to your computer at the local path specified above (if you can’t remember what this was choose ‘Show in Windows/Finder’ or similar, depending on your OS, under the Respository menu). This is where all of the course material will (eventually) be located. For example, look inside the <code>&#39;Workshop 1 - Athens&#39;</code> folder and open up the <code>&#39;Adv0_Preparation.html&#39;</code> file - that is a local copy of the same document you are currently reading! But now you also have the PDF version - use this if you want to print the document for some reason, but it is a good idea to stick to using the HTML version if you want to copy/paste R code (you will probably encounter problems with quotation marks if you copy/paste R code from PDF files). The two versions should be identical.</p>
 </div>
@@ -1704,7 +1704,7 @@ stopifnot(numeric_version(testjags()$rjags.version) &gt;= &quot;4-8&quot;)</code
 </div>
 <div id="more-information" class="section level2">
 <h2>More information</h2>
-<p>That is pretty much all you need to know for the training workshop but there are some good tutorials available, for example: <a href>https://happygitwithr.com</a>.</p>
+<p>That is pretty much all you need to know for the training workshop but there are some good tutorials available, for example: <a href="https://happygitwithr.com" class="uri">https://happygitwithr.com</a>.</p>
 </div>
 </div>
 <div id="revision-of-basic-principles" class="section level1">
